--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,30 @@
+p {
+  margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
 .container {
-  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 200px;
+}
+
+.popover {
+  position: absolute;
+  border: 1px solid black;
+  border-radius: 3px;
+  box-sizing: border-box;
+  width: 250px;
+}
+
+.popover-title {
+  background-color: #c9c9c9;
+  padding: 5px 10px;
+}
+
+.popover-text {
+  padding: 5px 10px;
 }
